# Leonid

./: .gitignore  docker-compose.yml  main.py  mainpage.html  register.html  zadaca_htm.html
Backend/: Dockerfile  main.py  pyproject.toml
Backend/app/: auth.py  auth_debug.py  db.py  models.py
Backend/data/: app.db
Frontend/assets/styles/: mainpage.css  register.css
Frontend/pages/: login.html  mainpage.html  register.html
Frontend/scripts/: chat.js  cookie-notice.js  login.js  register.js
assets/styles/: mainpage.css  register.css
scripts/: client.js  zadaca.js
